fixed tri content on mobile live 2

--- a/nwcc_pyramid/static/theme.css
+++ b/nwcc_pyramid/static/theme.css
@@ -83,7 +83,7 @@ hr {
   width: 100vw;
   overflow: hidden;
   margin-top: -0.4rem;
-  display: -webkit-inline-box;
+  /* display: -webkit-inline-box; */
 }
 
 .tricontent {
